[package]
name = "vdj-smooth-echo"
version = "0.1.0"
edition = "2021"
authors = ["Fraccy (ssh)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/wrl/baseplug.git", package = "baseplug" }
fundsp = "0.15.0"
serde = "1.0.190"
typenum = "1.17.0"

[lib]
name = "vdj_smooth_echo"
path = "src/vdj_smooth_echo.rs"
crate-type = ["cdylib"]
